# ROBO2021

./: README.md
reactive_robot/: CMakeLists.txt  README.md  package.xml
reactive_robot/aux/: process_stats.py
reactive_robot/include/: wall_following.h
reactive_robot/launch/: wall_following.launch  wall_following_0_2.launch  wall_following_0_3.launch  wall_following_0_4.launch  wall_following_0_5.launch  wall_following_0_6.launch
reactive_robot/msg/: DistToWall.msg
reactive_robot/src/wall_following/: main.cpp  main.py  pose_tracker.py  wall_following.cpp
reactive_robot/stats/kp_15/: error_2020-11-11 15:48:47.271581.csv  error_2020-11-11 15:51:00.708871.csv  error_2020-11-11 15:53:05.079036.csv  error_2020-11-11 15:54:38.292437.csv  error_2020-11-11 15:56:11.520336.csv  error_2020-11-12 17:16:27.005476.csv  error_2020-11-12 17:17:11.122657.csv  error_2020-11-12 17:17:55.023515.csv  error_2020-11-12 17:18:36.022939.csv  error_2020-11-12 17:19:18.841005.csv
reactive_robot/stats/kp_25/: error_2020-11-11 15:59:16.649970.csv  error_2020-11-11 16:00:51.325567.csv  error_2020-11-11 16:02:24.584096.csv  error_2020-11-11 16:03:55.866197.csv  error_2020-11-11 16:05:27.708375.csv  error_2020-11-12 17:20:45.369015.csv  error_2020-11-12 17:21:27.495116.csv  error_2020-11-12 17:22:09.093810.csv  error_2020-11-12 17:22:49.473510.csv  error_2020-11-12 17:24:03.588716.csv
reactive_robot/stats/kp_35/: error_2020-11-11 16:08:14.729679.csv  error_2020-11-11 16:09:42.603447.csv  error_2020-11-11 16:11:18.369988.csv  error_2020-11-11 16:12:53.689116.csv  error_2020-11-11 16:19:50.006110.csv  error_2020-11-12 17:25:00.652185.csv  error_2020-11-12 17:25:41.672520.csv  error_2020-11-12 17:26:25.897130.csv  error_2020-11-12 17:27:06.350932.csv  error_2020-11-12 17:27:49.395778.csv
reactive_robot/stats/kp_45/: error_2020-11-11 16:21:52.737444.csv  error_2020-11-11 16:24:04.194280.csv  error_2020-11-11 16:25:31.358307.csv  error_2020-11-11 16:27:00.283625.csv  error_2020-11-11 16:28:32.572188.csv  error_2020-11-12 17:28:50.075848.csv  error_2020-11-12 17:29:36.359852.csv  error_2020-11-12 17:30:17.012522.csv  error_2020-11-12 17:30:57.520532.csv  error_2020-11-12 17:31:37.091750.csv
reactive_robot/stats/kp_55/: error_2020-11-11 16:30:37.408792.csv  error_2020-11-11 16:33:29.841905.csv  error_2020-11-11 16:34:17.742071.csv  error_2020-11-11 16:35:43.705762.csv  error_2020-11-11 16:37:11.089425.csv  error_2020-11-12 17:32:47.977144.csv  error_2020-11-12 17:33:29.787165.csv  error_2020-11-12 17:36:10.192442.csv  (+2 more)
search-and-rescue/loop_functions/: CMakeLists.txt  id_qtuser_functions.cpp  id_qtuser_functions.h  search_loop_functions.cpp  search_loop_functions.h
(+140 files in other folders)
